kubernetes/applications/apps/homepage/app/namespace.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: app-homepage
