kubernetes/applications/apps/homepage/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
    - name: private
      namespace: infra-tailscale # Explicitly points across namespaces to your Tailscale Gateway
    - name: internal
      namespace: infra-gateway
  hostnames:
    - 'start.internal.${CLUSTER_DOMAIN}'
    - 'start.private.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
          weight: 100
